# vulkan-animation

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  application.cpp  application.h  main.cpp  renderer.cpp  renderer.h
assets/: clone_trooper_dancing_clone_wars_style.glb
docs/video/: screen_recording.mov
shaders/: compile.sh  shader.frag  shader.frag.spv  shader.vert  shader.vert.spv
src/: application.cpp  application.h  device.cpp  device.h  main.cpp  renderer.cpp  renderer.h  scene.h  swapchain.cpp  swapchain.h  vulkan.h
